syntax = "proto3";

package vdp.model.v1alpha;

// Google api
import "google/api/field_behavior.proto";

import "./common.proto";

// InstanceSegmentationObject corresponding to a instance segmentation object
message InstanceSegmentationObject {
  // Instance RLE segmentation mask
  string rle = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Instance category
  string category = 2 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Instance score
  float score = 3 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Instance bounding box
  BoundingBox bounding_box = 4 [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// InstanceSegmentationOutput represents the output of instance segmentation
// task
message InstanceSegmentationOutput {
  // A list of instance segmentation objects
  repeated InstanceSegmentationObject objects = 1
      [ (google.api.field_behavior) = OUTPUT_ONLY ];
}
